src/objects/CatereaseFinanceStaging__c.object
<CustomObject>
    <description>Object that holds Finance data from Caterease DB</description>
    <fields>
        <fullName>AcctCode__c</fullName>
        <label>AcctCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventStagingID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EventStagingID</label>
        <referenceTo>CatereaseEventStaging__c</referenceTo>
        <relationshipLabel>Caterease Finances - Staging</relationshipLabel>
        <relationshipName>CatereaseFinancesStaging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EvtNum__c</fullName>
        <label>EvtNum</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLCodeAmt__c</fullName>
        <formula>IF( LEFT( AcctCode__c , 2) ==&apos;40&apos; ,  TotalPrice__c -  TotalCost__c , IF( LEFT( AcctCode__c , 2) ==&apos;50&apos; ,TotalCost__c - TotalPrice__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GLCodeAmt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LocationName__c</fullName>
        <label>LocationName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <description>EventNum+GLCode+Location</description>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalCost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TotalCost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TotalPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>boomistate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BoomiState</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>processdate__c</fullName>
        <label>process date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>processmessage__c</fullName>
        <label>process message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>processstate__c</fullName>
        <label>process state</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Caterease Finance - Staging</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Caterease Finances - Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>